--- a/SpaceInvaders/SpaceInvaders/SpaceInvaders.vcxproj
+++ b/SpaceInvaders/SpaceInvaders/SpaceInvaders.vcxproj
@@ -179,6 +179,10 @@
     <ResourceCompile Include="SpaceInvaders.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="..\Sprites\background.bmp" />
+    <Image Include="..\Sprites\backgroundMask.bmp" />
+    <Image Include="..\Sprites\spritesSheet.bmp" />
+    <Image Include="..\Sprites\spritesSheetMask.bmp" />
     <Image Include="Sprites\spritesSheet.bmp" />
     <Image Include="Sprites\spritesSheetMask.bmp" />
   </ItemGroup>
