--- a/SpaceInvaders/SpaceInvaders/SpaceInvaders.vcxproj.filters
+++ b/SpaceInvaders/SpaceInvaders/SpaceInvaders.vcxproj.filters
@@ -103,10 +103,12 @@
     <Image Include="Sprites\spritesSheetMask.bmp">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="..\Sprites\background.bmp" />
-    <Image Include="..\Sprites\backgroundMask.bmp" />
-    <Image Include="..\Sprites\spritesSheet.bmp" />
-    <Image Include="..\Sprites\spritesSheetMask.bmp" />
+    <Image Include="..\Sprites\background.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\Sprites\backgroundMask.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SpaceInvaders.rc">
