--- a/SpaceInvaders/SpaceInvaders/SpaceInvaders.vcxproj.filters
+++ b/SpaceInvaders/SpaceInvaders/SpaceInvaders.vcxproj.filters
@@ -112,6 +112,8 @@
     <Image Include="..\Sprites\backgroundMask.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="..\Sprites\spritesSheet.bmp" />
+    <Image Include="..\Sprites\spritesSheetMask.bmp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SpaceInvaders.rc">
