Menu and Instructions

--- a/SpaceInvaders/SpaceInvaders/SpaceInvaders.vcxproj
+++ b/SpaceInvaders/SpaceInvaders/SpaceInvaders.vcxproj
@@ -160,7 +160,6 @@
     <ClCompile Include="level.cpp" />
     <ClCompile Include="LevelLogic.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="MenuNavigator.cpp" />
     <ClCompile Include="player.cpp" />
     <ClCompile Include="sprite.cpp" />
   </ItemGroup>
@@ -177,7 +176,6 @@
     <ClInclude Include="game.h" />
     <ClInclude Include="level.h" />
     <ClInclude Include="LevelLogic.h" />
-    <ClInclude Include="MenuNavigator.h" />
     <ClInclude Include="player.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="sprite.h" />
@@ -189,6 +187,7 @@
   <ItemGroup>
     <Image Include="..\Sprites\background.bmp" />
     <Image Include="..\Sprites\backgroundMask.bmp" />
+    <Image Include="..\Sprites\instructions.bmp" />
     <Image Include="..\Sprites\mainmenu.bmp" />
     <Image Include="..\Sprites\spritesSheet.bmp" />
     <Image Include="..\Sprites\spritesSheetMask.bmp" />
