--- a/SpaceInvaders/SpaceInvaders/SpaceInvaders.vcxproj.filters
+++ b/SpaceInvaders/SpaceInvaders/SpaceInvaders.vcxproj.filters
@@ -130,6 +130,12 @@
     <Image Include="..\Sprites\spritesSheet.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="..\Sprites\lvlCompleteMask.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\Sprites\lvlComplete.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SpaceInvaders.rc">
