--- a/SpaceInvaders/SpaceInvaders/SpaceInvaders.vcxproj.filters
+++ b/SpaceInvaders/SpaceInvaders/SpaceInvaders.vcxproj.filters
@@ -40,6 +40,9 @@
     <ClCompile Include="LevelLogic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HighScores.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="backbuffer.h">
@@ -85,6 +88,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="EEnums.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HighScores.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -133,6 +139,7 @@
     <Image Include="..\Sprites\highscores.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="..\sprites\bitmap1.bmp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SpaceInvaders.rc">
