--- a/SpaceInvaders/SpaceInvaders/SpaceInvaders.vcxproj
+++ b/SpaceInvaders/SpaceInvaders/SpaceInvaders.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="entity.cpp" />
     <ClCompile Include="framecounter.cpp" />
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="HighScores.cpp" />
     <ClCompile Include="level.cpp" />
     <ClCompile Include="LevelLogic.cpp" />
     <ClCompile Include="main.cpp" />
@@ -172,6 +173,7 @@
     <ClInclude Include="EEnums.h" />
     <ClInclude Include="framecounter.h" />
     <ClInclude Include="game.h" />
+    <ClInclude Include="HighScores.h" />
     <ClInclude Include="level.h" />
     <ClInclude Include="LevelLogic.h" />
     <ClInclude Include="player.h" />
@@ -185,6 +187,7 @@
   <ItemGroup>
     <Image Include="..\Sprites\background.bmp" />
     <Image Include="..\Sprites\backgroundMask.bmp" />
+    <Image Include="..\sprites\bitmap1.bmp" />
     <Image Include="..\Sprites\highscores.bmp" />
     <Image Include="..\Sprites\instructions.bmp" />
     <Image Include="..\Sprites\lvlComplete.bmp" />
